name:                myrapi
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Vladimir Kirillov
maintainer:          vlad.ki@zalora.com
copyright:           2014 Zalora
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Myracloud
  -- other-modules:       
  other-extensions:    OverloadedStrings, RecordWildCards, MultiParamTypeClasses, DefaultSignatures, TypeFamilies, FlexibleContexts, ScopedTypeVariables
  build-depends:       base >=4.7 && <4.8, bytestring >=0.10 && <0.11, base64-bytestring >=1.0 && <1.1, data-default >=0.5 && <0.6, aeson >=0.7 && <0.8, aeson-pretty >=0.7 && <0.8, conduit >=1.1 && <1.2, transformers >=0.3 && <0.4, resourcet >=1.1 && <1.2, conduit-extra >=1.1 && <1.2, http-types >=0.8 && <0.9, http-conduit >=2.1 && <2.2, time >=1.4 && <1.5, old-locale >=1.0 && <1.1, cryptohash >=0.11 && <0.12, unix >=2.7 && <2.8
  -- hs-source-dirs:      
  default-language:    Haskell2010
