name:                myrapi
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Vladimir Kirillov
maintainer:          vlad.ki@zalora.com
copyright:           2014 Zalora
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myrapi
  main-is:           Main.hs
  hs-source-dirs:    myrapi-commandline
  build-depends:
    base
    , aeson
    , bytestring
    , myrapi
    , optparse-applicative
    , servant
    , servant-client
    , text

library
  exposed-modules:
    Myracloud
    Myracloud.Signature
    Myracloud.Types
    Myracloud.Util
  build-depends:
    base >=4.7 && <4.8
    , aeson >= 0.8
    , base64-bytestring >=1.0 && <1.1
    , byteable
    , bytestring >=0.10 && <0.11
    , cryptohash >=0.11 && <0.12
    , either
    , http-types >=0.8 && <0.9
    , old-locale >=1.0 && <1.1
    , servant
    , servant-client >= 0.2.2
    , text
    , time >=1.4 && <1.5
    , transformers >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
