name:                myrapi
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Vladimir Kirillov
maintainer:          vlad.ki@zalora.com
copyright:           2014 Zalora
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myrapi
  main-is:           Main.hs
  other-modules:
    Myracloud.Commands
    Myracloud.Commands.DNS
    Myracloud.Commands.Util
  hs-source-dirs:    myrapi-commandline
  default-language:  Haskell2010
  build-depends:
    base
    , aeson
    , bytestring
    , myrapi
    , optparse-applicative
    , servant
    , servant-client
    , text

library
  exposed-modules:
    Myracloud
    Myracloud.DNS
    Myracloud.Signature
    Myracloud.Types
    Myracloud.Util
  build-depends:
    base
    , aeson >= 0.8
    , base64-bytestring >=1.0
    , byteable
    , bytestring >=0.10
    , cryptohash >=0.11
    , either
    , http-types >=0.8
    , old-locale >=1.0
    , servant == 0.4.4.5
    , servant-client == 0.4.4.5
    , text
    , time >=1.4
    , time-locale-compat
    , transformers >=0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
